2003-12-16 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	(committed by Erik Petrich <epetrich@ivorytower.norman.ok.us> on Frieder's behalf)
	* src/mcs51/main.c: fixed the fix for bug #737001

2003-12-15  Borut Razem <borut.razem@siol.net>

	* support/scripts/sdcc.nsi: updated for NSIS 2.0 beta 4

2003-12-14 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* support/makebin/makebin.c: put output in binary mode

2003-12-13 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/main.c: fixed bug #737001 for the mcs51. SDCC clears 
	xdata and data memory on startup. Set the environment variable 
	SDCC_NOGENRAMCLEAR to disable this.
	* src/mcs51/peephole.def,
	* src/ds390/peephole.def: using the atomic test and clear instruction jbc
	(allows non-interrupt and interrupt code to safely compete for a resource
	without the non-interrupt code having to disable interrupts)

2003-12-13 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCicode.c (geniCodeAdd),
	* src/SDCCast.c (decorateType): fixed bug #857753 (need to be careful
	with valFromType if type might be a pointer and host is big endian).
	* src/SDCCast.c (decorateType): unary plus compatible with all arithmetic
	types, not just integer types.
	* src/SDCCsymt.c (addSymChain): clarified error message when symbol is
	multiply defined with mismatching "at" address.

2003-12-12 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/ds390/main.c (PORT tininative_port): fixed bug #858416
	* src/SDCCglue.c (printChar, printIvalChar, emitStaticSeg),
	* src/SDCCast.c (createIvalCharPtr, stringToSymbol): handle strings
	with embedded nulls (fixed bug #753752)

2003-12-12 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/main.c(_mcs51_genRAMCLEAR): using r0 instead of r1/r2.
	Apparently this did not see much testing (endless loop)

2003-12-11 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/ralloc.c: set DISABLE_PACK_HL = 1 as a temporary fix to bug #855165
